--- a/src/Page/Cart.css
+++ b/src/Page/Cart.css
@@ -194,3 +194,36 @@
     background-color: rgb(236, 190, 190);
     border-radius: 50%;
 }
+
+.subtotal {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 40px;
+    align-items: center;
+    text-align: right;
+    color: #000000
+}
+
+.tex {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 40px;
+    align-items: center;
+    text-align: right;
+    color: #000000
+}
+
+.total {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 40px;
+    align-items: center;
+    text-align: right;
+    color: #000000
+}
